# BayesianTracker

./: .gitignore  meson.build  pyproject.toml  requirements-docs.txt  user_config.json
.github/workflows/: cibuildwheel.yml
btrack/: libwrapper.py  meson.build  models.py  utils.py
btrack/include/: inference.h
btrack/io/: meson.build
btrack/napari/widgets/: meson.build
btrack/src/: meson.build
docs/: api.rst  conf.py
src/btrack/: libwrapper.py  meson.build
src/btrack/include/: motion.h  pdf.h  tracker.h  tracklet.h  types.h
src/btrack/napari/: meson.build
src/btrack/optimise/: meson.build
