python_sources = [
  '__init__.py',
  '_version.py',
  'btypes.py',
  'config.py',
  'constants.py',
  'core.py',
  'dataio.py',
  'datasets.py',
  'libwrapper.py',
  'models.py',
  'utils.py',
]

py.install_sources(
  python_sources,
  pure: false,
  subdir: 'btrack'
)

subdir('io')
subdir('optimise')
subdir('src')
